add further info about ordwatch

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ main {
 .content {
   max-width: 800px;
   text-align: left;
+  margin-bottom: 40px; /* Added margin to create space before the footer */
 }
 
 .content h2 {
